<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/employee_details_personal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="פרטים אישיים:"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/employee_details_first_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <EditText
                android:id="@+id/employee_details_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/employee_details_last_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <EditText
                android:id="@+id/employee_details_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/employee_details_phone_number_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >
            <EditText
                android:id="@+id/employee_details_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:digits="0123456789"
                android:maxLength="10"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/employee_details_user_detalis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:text="פרטי משתמש:"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/employee_details_username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >

            <EditText
                android:id="@+id/employee_details_employee_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/employee_details_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            >

            <EditText
                android:id="@+id/employee_details_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <Spinner
                android:id="@+id/employee_details_role_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:dropDownWidth="match_parent"
                android:entries="@array/roles"
                android:popupBackground="@color/colorPrimary"
                />

            <Spinner
                android:id="@+id/employee_details_permission_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:dropDownWidth="match_parent"
                android:entries="@array/roles"
                android:popupBackground="@color/colorPrimary"
                />

        </LinearLayout>

        <Button
            android:id="@+id/employee_details_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/add_employee"
            android:textColor="@color/colorPrimary"

            android:layout_marginBottom="9dp"
            android:layout_marginTop="40dp"
            />


    </LinearLayout>
</ScrollView>
